# rustapi

./: Cargo.toml  readme.md  tailwind.config.js
backend/: Cargo.toml
backend/src/: main.rs
backend/src/html/: index.html
backend/src/routes/: index.rs
src/: main.rs
src/api/: apis.rs  country.rs  hottake.rs  json.rs  links.rs  mod.rs  mongo.rs  pokemon.rs  user_api.rs
src/data/: hottake.json  redirect.json
src/html/: index.html
src/models/: user_model.rs
src/repository/: mongo_db.rs
src/routes/: connect.rs  db.rs  duckduckgo.rs  err.rs  html.rs  index.rs  json.rs  mod.rs  mongo.rs  mongodb.rs  pokemonapi.rs  quoteapi.rs  random.rs  redirect.rs  sort.rs  tokio_rs.rs  user.rs  ytapi.rs
src/routes/html/: htmx.html  index.html
src/routes/sort/: mod.rs  selection.rs  simple.rs  sort.rs
src/routes/sort_algs/: bubble.rs  insertion.rs  merge.rs  mod.rs  rust.rs  selection.rs  simple.rs
src2/: main.rs
src2/data/html/: index.html
src2/models/: user_model.rs
src2/routes/: index.rs  redirect.rs  sort.rs
src2/routes/sort_algs/: bubble.rs  merge.rs  rust.rs
