[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
dotenv = "0.15.0"
tokio = { version = "1.3", features = ["full"]}
mongodb = "2.3.0"
bson = { version = "2", features = ["chrono-0_4"] }
exitfailure = "0.5.1"
chrono = "0.4"
serde = "1"