[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
dotenv = "0.15.0"
tokio = { version = "1.28", features = ["full"]}
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
serde = "1"
serde_json = "1.0"
reqwest =  { version = "0.11.14", features = ["json"] } 
rand = "0.8.5"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["tokio-sync"]
