[package]
name = "rust"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
dotenv = "0.15.0"
tokio = { version = "1.28", features = ["full"]}
serde = "1"
serde_json = "1.0"
reqwest =  { version = "0.11.14", features = ["json"] } 
rand = "0.8.5"